# project-status-checker

./: .dockerignore  .gitignore  .gitleaksignore  CHANGELOG.md  Dockerfile  Justfile  README.md  action.yml  lefthook.yml  package-lock.json  package.json  pyproject.toml  run.sh  sonar-project.properties  status-checker-database.sqlite  status-checker-output.db
.github/: dependabot.yml  pull_request_template.md
.github/actions/local/: action.yml
.github/actions/setup-dependencies/: action.yml
.github/other-configurations/: labeller.yml  labels.yml
.github/release-please/: release-please-config.json
.github/tool-configurations/: labels.yml
.github/workflows/: code-build.yml  code-checks.yml  code-quality.yml  code-test.yml  pull-request-checks.yml  pull-request-tasks.yml  release-package.yml  release.yml  sync-labels.yml
10_downgrade_markdown_link_checker/: action.json  report.json
11_pyproject_checks/: action.json  report.json
12_upgrade_markdown_link_checker/: action.json  report.json
13_schedule_code_checks/: action.json  report.json
14_refactor_github_actions/: action.json  report.json
15_clear_caches/: action.json  report.json
16_codeql_config/: action.json  report.json
17_dependency_review/: action.json  report.json
18_daily_updates/: action.json  report.json
19_superlinter_permissions/: action.json  report.json
20_markdown_link_checker/: action.json  report.json
21_update_editorconfig_checker/: action.json  report.json
22_codeql_cron/: action.json  report.json
23_dependabot_groups/: action.json  report.json
24_remove_pinact_config/: action.json  report.json
25_zizmor_config/: action.json  report.json
26_zizmor_sarif/: action.json  report.json
27_dependabot_reusable_workflows/: action.json  report.json
28_common_sync_labels/: action.json  report.json
29_common_clear_caches/: action.json  report.json
30_dependabot_reusable_workflows/: action.json  report.json
31_migrate_to_reusable_codeql_workflow/: action.json  report.json
8_code_of_conduct/: action.json  codelimit.md  report.json
9_upgrade_licenses/: action.json  report.json
action-refactor/: action.json  report.json
bump-versions/: action.json  report.json
bump_versions/: action.json  report.json
checker/: __main__.py  application_configuration.py  checker.py  configuration.py  github_action_summary.py  save_results.py  url.py  url_check_result.py
checker/tests/: test__main__.py  test_application_configuration.py  test_checker.py  test_configuration.py  test_custom_logging.py  test_github_action_summary.py  test_main.py  test_save_results.py  test_url.py  test_url_check_result.py
codeql/: action.json  report.json
common-code-checks/: action.json  report.json
dependabot/github_actions/main/github-actions-00d1a872b5/: action.json  report.json
dependabot/github_actions/main/github-actions-03ba629f3d/: action.json  codelimit.md  report.json
dependabot/github_actions/main/github-actions-132199cf0a/: action.json  report.json
dependabot/github_actions/main/github-actions-207b180c3e/: action.json  report.json
dependabot/github_actions/main/github-actions-27716211ba/: action.json  (+1 more)
dependabot/pip/pip-512858e340/: action.json  report.json
docs/: SECURITY.md
examples/: full_example.json
fix_zizmor/: action.json  report.json
force_log_colours/: action.json  report.json
githooks/: action.json  report.json
githooks/pre-commit-scripts/: python.sh
labels/: action.json  report.json
lefthook/: action.json  report.json
lefthook-v/: action.json  report.json
line-length/: action.json  report.json
main/: report.json
pin/: action.json  report.json
poetry_v2/: action.json  report.json
pull_request_checks/: action.json  report.json
refactor_actions/: action.json  report.json
release-please--branches--main/: action.json  report.json
remove-codeql-config/: action.json  report.json
set-version/: action.json  report.json
sonarcloud-config/: action.json  report.json
sonarqube-action/: action.json  report.json
superlinter/: action.json  report.json
superlinter-update/: action.json  report.json
tests/: test_database.sh
tests/github_summary/: test_github_summary.py
update/: action.json  report.json
update-sonarcloud/: action.json  report.json
update4/: action.json  report.json
update5/: action.json  report.json
update6/: action.json  report.json
update_codelimit/: action.json  report.json
uv/: action.json  report.json
uv-migrate/: action.json  report.json
zizmor/: action.json  report.json
(+111 files in other folders)
