
[project]
name = "project-status-checker"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
  "structlog==25.4.0",
  "requests==2.32.5",
  "mdutils==1.8.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.13.2",
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "vulture==2.14",
]
test = ["Markdown==3.8", "beautifulsoup4==4.13.5"]

[tool.uv]
required-version = "~=0.8.0"
package = false

[tool.setuptools]
py-modules = ["checker", "tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
  "FBT001",  # Ignore Boolean-typed positional argument in function definition
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["checker"]

[tool.vulture]
ignore_names = ["side_effect"]
exclude = ["*/plugins/*", ".venv"]
